--- a/index.html
+++ b/index.html
@@ -122,14 +122,13 @@
 				<div class="col-12 font-thin">View the key political <span class="font-semibold">Parties</span>, their <span class="font-semibold">Leaders</span>, and their <span class="font-semibold">Partners</span>.</div>
 			</div><!-- /row -->
 		
-		<div class="row">
+		<div class="">
 			
-			<div class="col-6 col-sm-6 col-lg-6"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/02.png"><img class="thumb" src="images/screenshots/02-small.png" alt=""></a></div>
-			<div class="col-6 col-sm-6 col-lg-6"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/03.png"><img class="thumb" src="images/screenshots/03-small.png" alt=""></a></div>
-			<div class="col-6 col-sm-6 col-lg-6"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/04.png"><img class="thumb" src="images/screenshots/04-small.png" alt=""></a></div>
-			<div class="col-6 col-sm-6 col-lg-6"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/05.png"><img class="thumb" src="images/screenshots/05-small.png" alt=""></a></div>
-			<!--div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p06-large.jpg"><img class="thumb" src="images/portfolio/p06-small.jpg" alt=""></a></div>
-			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p07-large.jpg"><img class="thumb" src="images/portfolio/p07-small.jpg" alt=""></a></div>
+			<div class="col-6 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/02.png"><img class="thumb" src="images/screenshots/02-small.png" alt=""></a></div>
+			<div class="col-6 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/03.png"><img class="thumb" src="images/screenshots/03-small.png" alt=""></a></div>
+			<div class="col-6 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/04.png"><img class="thumb" src="images/screenshots/04-small.png" alt=""></a></div>
+			<div class="col-6 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/05.png"><img class="thumb" src="images/screenshots/05-small.png" alt=""></a></div>			
+			<!--div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p06-large.jpg"><img class="thumb" src="images/portfolio/p06-small.jpg" alt=""></a></div>			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p07-large.jpg"><img class="thumb" src="images/portfolio/p07-small.jpg" alt=""></a></div>
 			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p08-large.jpg"><img class="thumb" src="images/portfolio/p08-small.jpg" alt=""></a></div>
 			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p03-large.jpg"><img class="thumb" src="images/portfolio/p03-small.jpg" alt=""></a></div>
 			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p04-large.jpg"><img class="thumb" src="images/portfolio/p04-small.jpg" alt=""></a></div>
