Updated Screenshot heading section.

--- a/index.html
+++ b/index.html
@@ -91,25 +91,20 @@
 				<div class="col-12 font-thin">The <span class="font-semibold"><a href="http://emotive.lboro.ac.uk/" target="_Blank">EMOTIVE(tm)</a></span> engine then extracts the <span class="font-semibold">emotional views</span> expressed in people's tweets and VoteBee <span class="font-semibold">shows you the honey</span>.</div>
 			</div><!-- /row -->
 			<div class="row content-row">
-				<div class="col-12 col-lg-3 col-sm-6">
+				<div class="col-12 col-lg-4 col-sm-6">
 					<p><i class="icon icon-eye-open"></i></p>
 					<h2 class="font-thin"><span class="font-semibold">VoteBee</span> scans the <span class="font-semibold">Twittersphere</span></h2>
 					<h4 class="font-thin">Collecting all the tweets relating to the UK Political Landscape.</h4>
 				</div><!-- /col12 -->
-				<div class="col-12 col-lg-3 col-sm-6">
+				<div class="col-12 col-lg-4 col-sm-6">
 					<p><i class="icon icon-cloud"></i></p>
 					<h2 class="font-thin"><span class="font-semibold">EMOTIVE</span> runs <span class="font-semibold">NLP Algorithms</span></h2>
 					<h4 class="font-thin">Calculating the various emotional scores for the search terms.</h4>
 				</div><!-- /col12 -->
-				<div class="col-12 col-lg-3 col-sm-6">
+				<div class="col-12 col-lg-4 col-sm-6">
 					<p><i class="icon icon-dashboard"></i></p>
 					<h2 class="font-thin"><span class="font-semibold">VoteBee</span> shows <span class="font-semibold">You</span> the <span class="font-semibold">Honey</span>.</h2>
 					<h4 class="font-thin">Displaying detailed graphs identifying the electorate's true emotions.</h4>
-				</div><!-- /col12 -->
-				<div class="col-12 col-lg-3 col-sm-6">
-					<p><i class="icon icon-time"></i></p>
-					<h2 class="font-thin">Time-Lapsed <span class="font-semibold">Interactive</span> graphs.</h2>
-					<h4 class="font-thin">Show you how people's emotions are evolving over time.</h4>
 				</div><!-- /col12 -->
 			</div><!-- /row -->
 		</div><!-- /container -->
@@ -118,16 +113,16 @@
 	<!-- === SLide 3 - Portfolio -->
 	<section class="slide story" id="slide-3" data-slide="3">
 	<div class="container">		
-			<div class="row title-row">	
+			<div class="title-row">	
 				<div class="col-12 font-thin">View the key political <span class="font-semibold">Parties</span>, their <span class="font-semibold">Leaders</span>, and their <span class="font-semibold">Partners</span>.</div>
 			</div><!-- /row -->
 		
 		<div class="">
 			
-			<div class="col-6 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/02.png"><img class="thumb" src="images/screenshots/02-small.png" alt=""></a></div>
-			<div class="col-6 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/03.png"><img class="thumb" src="images/screenshots/03-small.png" alt=""></a></div>
-			<div class="col-6 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/04.png"><img class="thumb" src="images/screenshots/04-small.png" alt=""></a></div>
-			<div class="col-6 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/05.png"><img class="thumb" src="images/screenshots/05-small.png" alt=""></a></div>			
+			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/02.png"><img class="thumb" src="images/screenshots/02-small.png" alt=""></a></div>
+			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/03.png"><img class="thumb" src="images/screenshots/03-small.png" alt=""></a></div>
+			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/04.png"><img class="thumb" src="images/screenshots/04-small.png" alt=""></a></div>
+			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/05.png"><img class="thumb" src="images/screenshots/05-small.png" alt=""></a></div>			
 			<!--div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p06-large.jpg"><img class="thumb" src="images/portfolio/p06-small.jpg" alt=""></a></div>			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p07-large.jpg"><img class="thumb" src="images/portfolio/p07-small.jpg" alt=""></a></div>
 			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p08-large.jpg"><img class="thumb" src="images/portfolio/p08-small.jpg" alt=""></a></div>
 			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p03-large.jpg"><img class="thumb" src="images/portfolio/p03-small.jpg" alt=""></a></div>
@@ -159,8 +154,16 @@
 						<span class="hover-text font-light ">Apple iOS App Store</span></a>
 					</div>
 					<div class="col-6 with-hover-text">
-						<p><a target="_blank" href="#"><img src="images/playstoredownload.jpg"/></a></p>
-						<span class="hover-text font-light ">Google Play Store</span></a>
+						<h2>Get the Full version with ALL the content!</h2>
+						<a href="https://play.google.com/store/apps/details?id=uk.ac.lboro.votebeepaid">
+						  <img height="100px;" alt="Get the Full version on Google Play"
+						       src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+						</a>
+						<h2>Or try the Free version with just the Parties, Leaders and Partners...</h2>
+						<a href="https://play.google.com/store/apps/details?id=uk.ac.lboro.votebee">
+						  <img height="100px;" alt="Get the Free version on Google Play"
+						       src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+						</a>
 					</div>
 				</div>
 				<!--div class="col-12 col-sm-2 with-hover-text">
