Loads of updates

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	
 	<title>VoteBee - UK 2015 General Election Voter Emotion tracker.</title> 
+	<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="https://votebee.social/images/favicon.png"/>
 	<meta name="description" content="BlackTie.co - Free Handsome Bootstrap Themes" />	    
 	<meta name="keywords" content="themes, bootstrap, free, templates, bootstrap 3, freebie,">
 	<meta property="og:title" content="">
@@ -15,7 +17,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="css/style.css">	
 	<link rel="stylesheet" href="css/star-rating.min.css" media="all" rel="stylesheet" type="text/css"/>
-	<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	
 	
 	<link rel="prefetch" href="images/zoom.png">
@@ -51,15 +53,15 @@
 	
 	
 	<!-- === Arrows === -->
-	<div id="arrows">
+	<!--div id="arrows">
 		<div id="arrow-up" class="disabled"></div>
 		<div id="arrow-down"></div>
 		<div id="arrow-left" class="disabled visible-lg"></div>
 		<div id="arrow-right" class="disabled visible-lg"></div>
-	</div><!-- /.arrows -->
+	</div--><!-- /.arrows -->
 	
 	
-	<!-- === MAIN Background === -->
+	<!-- === MAIN === -->
 	<section class="slide story" id="slide-1" data-slide="1" data-speed="3" data-type="background">
 		<div class="container">
 			<div id="home-row-1" class="row clearfix">
@@ -88,7 +90,7 @@
 				<div class="hr">&nbsp;</div>
 			</div><!-- /row -->
 			<div class="row subtitle-row">
-				<div class="col-12 font-thin">The <span class="font-semibold"><a href="http://emotive.lboro.ac.uk/" target="_Blank">EMOTIVE(tm)</a></span> engine then extracts the <span class="font-semibold">emotional views</span> expressed in people's tweets and VoteBee <span class="font-semibold">shows you the honey</span>.</div>
+				<div class="col-12 font-thin">The <span class="font-semibold"><a href="" onclick='window.open("https://emotive.lboro.ac.uk");return false;'>EMOTIVE(tm)</a></span> engine then extracts the <span class="font-semibold">emotional views</span> expressed in people's tweets and VoteBee <span class="font-semibold">shows you the honey</span>.</div>
 			</div><!-- /row -->
 			<div class="row content-row">
 				<div class="col-12 col-lg-4 col-sm-6">
@@ -110,26 +112,41 @@
 		</div><!-- /container -->
 	</section><!-- /slide2 -->
 	
-	<!-- === SLide 3 - Portfolio -->
+	<!-- === SLide 3 -->
 	<section class="slide story" id="slide-3" data-slide="3">
 	<div class="container">		
 			<div class="title-row">	
-				<div class="col-12 font-thin">View the key political <span class="font-semibold">Parties</span>, their <span class="font-semibold">Leaders</span>, and their <span class="font-semibold">Partners</span>.</div>
+				<div class="col-12 font-thin">See the emotional reactions of the electorate towards the key political <span class="font-semibold">Parties</span>, their <span class="font-semibold">Leaders</span>, and their <span class="font-semibold">Partners</span> in the <span class="font-semibold">Free edition...</span></div>
 			</div><!-- /row -->
 		
+<div class="subtitle-row">
+					<div class="">&nbsp;</div>
+				</div><!-- /row -->
+				
 		<div class="">
 			
 			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/02.png"><img class="thumb" src="images/screenshots/02-small.png" alt=""></a></div>
 			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/03.png"><img class="thumb" src="images/screenshots/03-small.png" alt=""></a></div>
 			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/04.png"><img class="thumb" src="images/screenshots/04-small.png" alt=""></a></div>
-			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/05.png"><img class="thumb" src="images/screenshots/05-small.png" alt=""></a></div>			
-			<!--div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p06-large.jpg"><img class="thumb" src="images/portfolio/p06-small.jpg" alt=""></a></div>			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p07-large.jpg"><img class="thumb" src="images/portfolio/p07-small.jpg" alt=""></a></div>
-			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p08-large.jpg"><img class="thumb" src="images/portfolio/p08-small.jpg" alt=""></a></div>
-			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p03-large.jpg"><img class="thumb" src="images/portfolio/p03-small.jpg" alt=""></a></div>
-			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p04-large.jpg"><img class="thumb" src="images/portfolio/p04-small.jpg" alt=""></a></div>
-			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p11-large.jpg"><img class="thumb" src="images/portfolio/p11-small.jpg" alt=""></a></div>
-			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/portfolio/p12-large.jpg"><img class="thumb" src="images/portfolio/p12-small.jpg" alt=""></a></div-->
+			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/05.png"><img class="thumb" src="images/screenshots/05-small.png" alt=""></a></div>
 		</div><!-- /row -->
+<div class="subtitle-row">
+					<div class="">&nbsp;</div>
+				</div><!-- /row -->
+			<div class="title-row">
+			<div class="col-12 font-thin">... and the key <span class="font-semibold">Policies</span> and <span class="font-semibold">Candidates</span> from each party are included in the <span class="font-semibold">Full edition.</span></div>
+			</div><!-- /row -->
+		
+<div class="subtitle-row">
+					<div class="">&nbsp;</div>
+				</div><!-- /row -->
+
+			<div class="">	
+				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/02.png"><img class="thumb" src="images/screenshots/02-small.png" alt=""></a></div>
+				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/03.png"><img class="thumb" src="images/screenshots/03-small.png" alt=""></a></div>
+				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/04.png"><img class="thumb" src="images/screenshots/04-small.png" alt=""></a></div>
+				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/05.png"><img class="thumb" src="images/screenshots/05-small.png" alt=""></a></div>			
+			</div>
 		</div>
 	</section><!-- /slide3 -->
 	
@@ -137,33 +154,37 @@
 	<div class="slide story" id="slide-5" data-slide="5">
 		<div class="container">
 			<div class="row title-row">
-				<div class="col-12 font-light">Simply download the VoteBee app for either Apple iOS or Android devices.</div>
+				<div class="col-12 font-light">Simply download the <b>VoteBee</b> app for either <b>Apple iOS</b> or <b>Android</b> devices. Select the <b>download link</b> that's right for <b>your device</b>.</div>
 			</div>
-			<div class="row line-row">
-				<div class="hr">&nbsp;</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-1 hidden-sm">&nbsp;</div>
-				<div class="col-12 font-light"><h2>Select the Store that's right for your device.<h2></div>
-				<div class="col-sm-1 hidden-sm">&nbsp;</div>
-			</div>
-			<div id="contact-row-4" class="row">
-				<!--div class="col-sm-1 hidden-sm">&nbsp;</div-->
-					<div class="col-6 with-hover-text">
-						<p><a target="_blank" href="#"><img src="images/appstoredownload.png"/></a></p>
-						<span class="hover-text font-light ">Apple iOS App Store</span></a>
+			<div class="line-row">
+						<div class="hr">&nbsp;</div>
 					</div>
-					<div class="col-6 with-hover-text">
-						<h2>Get the Full version with ALL the content!</h2>
-						<a href="https://play.google.com/store/apps/details?id=uk.ac.lboro.votebeepaid">
+			<div id="contact-row-4">
+					<div class="col-6 font-light">
+						<h2 class="font-thin">Get the <b>Full</b> version with <b>ALL</b> the content and <b>extra graphs</b>:-</h2>
+						<a href="https://play.google.com/store/apps/details?id=uk.ac.lboro.votebeepaid" target="_Blank">
 						  <img height="100px;" alt="Get the Full version on Google Play"
-						       src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+						       src="images/playstoredownload.png" onclick='window.open("https://play.google.com/store/apps/details?id=uk.ac.lboro.votebeepaid");return false;'/>
 						</a>
-						<h2>Or try the Free version with just the Parties, Leaders and Partners...</h2>
+						<div class="subtitle-row with-hover-text"><b>iOS</b> version coming soon....<span class="hover-text font-light"><p>Send us your email using the feedback form below to receive updates.</p></span></div>
+						<!--div class="">&nbsp;</div>
+						<a href="https://apple.com">
+						  <img height="100px;" alt="Get the Full version on the App Store"
+						       src="images/appstoredownload.png" onclick='window.open("https://apple.com");return false;'/>
+						</a-->
+					</div>
+					<div class="col-6">
+						<h2 class="font-thin">Or try the <b>Free</b> version with <b>Parties</b>,<b> Leaders</b> and <b>Partners</b>:-</h2>
 						<a href="https://play.google.com/store/apps/details?id=uk.ac.lboro.votebee">
-						  <img height="100px;" alt="Get the Free version on Google Play"
-						       src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+						  <img height="100px;" alt="Get the Full version on Google Play"
+						       src="images/playstoredownload.png" onclick='window.open("https://play.google.com/store/apps/details?id=uk.ac.lboro.votebee");return false;'/> 
 						</a>
+						<div class="subtitle-row with-hover-text"><b>iOS</b> version coming soon....<span class="hover-text font-light"><p>Send us your email using the feedback form below to receive updates.</p></span></div>
+						<!--div class="">&nbsp;</div>
+						<a href="https://apple.com">
+						  <img height="100px;" alt="Get the Full version on the App Store"
+						       src="images/appstoredownload.png" onclick='window.open("https://apple.com");return false;'/>
+						</a-->
 					</div>
 				</div>
 				<!--div class="col-12 col-sm-2 with-hover-text">
@@ -186,8 +207,8 @@
 	<!-- === Slide 4 - Process === -->
 	<section class="slide story" id="slide-4" data-slide="4">
 		<div class="container">
-			<div class="row">
-				<div class="col-6">
+			<div class="">
+				<div class="col-6 col-sm-6 col-xs-12">
 					<div class="title-row">Tell us how you feel...</div>
 					<div class="line-row">
 						<div class="hr">&nbsp;</div>
@@ -197,19 +218,20 @@
 					<div class="subtitle-row"></div>
 					<div class="subtitle-row"></div>
 				</div>
-				<div class="col-6">
-					<form>
-						<div style="text-align:left;">
+				<div class="col-6 col-sm-6 col-xs-12">
+					
+					<form id="feedbackForm" action="" method="POST" target="fake-target">
+						<div style="text-align:left;"> 
+						<br/> 
 						<br/>
-						<br/>
-					    	<input id="starRating" class="rating" min="0" max="5" step="2" data-size="sm" show-caption="false" data-symbol="&#xf005;" data-glyphicon="false" data-rating-class="rating-fa" hover-change-caption="false">
+					    	<input name="AppRating" id="AppRating" class="rating" min="0" max="5" step="2" data-size="sm" show-caption="false" data-symbol="&#xf005;" data-glyphicon="false" data-rating-class="rating-fa" hover-change-caption="false">
 					    	<br/>
 						</div>
 						<div class="line-row">
 							<div class="row">&nbsp;</div>
 						</div>
 						<div class="form-group">
-						    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Please enter your email">
+						    <input name="EmailAddress" id="EmailAddress" type="email" class="form-control" placeholder="Please enter your email">
 						    <h4>We won't share your details with anyone!</h4>
 						</div>
 						<div class="line-row">
@@ -217,21 +239,28 @@
 						</div>
 						<div class="form-group">
 
-						<textarea id="feedbackText" class="form-control" rows="3" placeholder="Tell us about your feedback..."></textarea>
+						<textarea name="FeedbackText" id="FeedbackText" class="form-control" rows="3" placeholder="Tell us about your feedback..."></textarea>
 						    <h4>If you're having problems, please include your device make and model so we can find a solution for you ASAP.</h4>
 						</div>
-
+						<input type="hidden" name="DeviceMake" id="DeviceMake"/>
+						<input type="hidden" name="DeviceModel" id="DeviceModel"/>
 						<div class="line-row">
 							<div class="row">&nbsp;</div>
 						</div>
-						<button type="submit" class="btn btn-default">Submit</button>
+						<button id="submit" type="submit" class="btn btn-success" onclick="$('#feedbackForm').submit();">Submit</button>
 					</form>
+					<div class="title-row" style="display:none;" id="form-message"> </div> 
+					<div class="subtitle-row" id="form-rateapp" style="display:none;">
+						<p>
+							<button class="btn btn-success btn-lg" onclick='window.open("https://play.google.com/store/apps/details?id=uk.ac.lboro.votebee");return false;'>Rate the <b>Free</b> Edition on Google Play</button>
+							<button class="btn btn-success btn-lg" onclick='window.open("https://play.google.com/store/apps/details?id=uk.ac.lboro.votebeepaid");return false;'>Rate the <b>Full</b> Edition on Google Play</button>
+						</p>
+					</div>
 				</div>
 
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</section><!-- /slide4 -->
-	
 	
 	
 	<!-- === Slide 6 / Contact === 
@@ -290,6 +319,7 @@
 	<!-- fancybox init -->
 	<script>
 	$(document).ready(function(e) {
+
 		var lis = $('.nav > li');
 		menu_focus( lis[0], 1 );
 		
@@ -303,6 +333,19 @@
 		});
 	
 	});
+	var urlParams;
+	(window.onpopstate = function () {
+	    var match,
+	        pl     = /\+/g,  // Regex for replacing addition symbol with a space
+	        search = /([^&=]+)=?([^&]*)/g,
+	        decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
+	        query  = window.location.search.substring(1);
+
+	    urlParams = {};
+	    while (match = search.exec(query))
+	       urlParams[decode(match[1])] = decode(match[2]);
+	})();
+
 	</script>
 
 </html>
