--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
 	
 	
 	<link rel="prefetch" href="images/zoom.png">
-		
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-21165174-5', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 </head>
 
 <body>
@@ -93,17 +102,17 @@
 				<div class="col-12 font-thin">The <span class="font-semibold"><a href="" onclick='window.open("https://emotive.lboro.ac.uk");return false;'>EMOTIVE(tm)</a></span> engine then extracts the <span class="font-semibold">emotional views</span> expressed in people's tweets and VoteBee <span class="font-semibold">shows you the honey</span>.</div>
 			</div><!-- /row -->
 			<div class="row content-row">
-				<div class="col-12 col-lg-4 col-sm-6">
+				<div class="col-12 col-lg-4 col-sm-4">
 					<p><i class="icon icon-eye-open"></i></p>
 					<h2 class="font-thin"><span class="font-semibold">VoteBee</span> scans the <span class="font-semibold">Twittersphere</span></h2>
 					<h4 class="font-thin">Collecting all the tweets relating to the UK Political Landscape.</h4>
 				</div><!-- /col12 -->
-				<div class="col-12 col-lg-4 col-sm-6">
+				<div class="col-12 col-lg-4 col-sm-4">
 					<p><i class="icon icon-cloud"></i></p>
 					<h2 class="font-thin"><span class="font-semibold">EMOTIVE</span> runs <span class="font-semibold">NLP Algorithms</span></h2>
 					<h4 class="font-thin">Calculating the various emotional scores for the search terms.</h4>
 				</div><!-- /col12 -->
-				<div class="col-12 col-lg-4 col-sm-6">
+				<div class="col-12 col-lg-4 col-sm-4">
 					<p><i class="icon icon-dashboard"></i></p>
 					<h2 class="font-thin"><span class="font-semibold">VoteBee</span> shows <span class="font-semibold">You</span> the <span class="font-semibold">Honey</span>.</h2>
 					<h4 class="font-thin">Displaying detailed graphs identifying the electorate's true emotions.</h4>
@@ -126,9 +135,9 @@
 		<div class="">
 			
 			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/02.png"><img class="thumb" src="images/screenshots/02-small.png" alt=""></a></div>
-			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/03.png"><img class="thumb" src="images/screenshots/03-small.png" alt=""></a></div>
 			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/04.png"><img class="thumb" src="images/screenshots/04-small.png" alt=""></a></div>
-			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/05.png"><img class="thumb" src="images/screenshots/05-small.png" alt=""></a></div>
+			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/03.png"><img class="thumb" src="images/screenshots/03-small.png" alt=""></a></div>
+			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/09.png"><img class="thumb" src="images/screenshots/09-small.png" alt=""></a></div>
 		</div><!-- /row -->
 <div class="subtitle-row">
 					<div class="">&nbsp;</div>
@@ -142,9 +151,9 @@
 				</div><!-- /row -->
 
 			<div class="">	
-				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/02.png"><img class="thumb" src="images/screenshots/02-small.png" alt=""></a></div>
-				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/03.png"><img class="thumb" src="images/screenshots/03-small.png" alt=""></a></div>
-				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/04.png"><img class="thumb" src="images/screenshots/04-small.png" alt=""></a></div>
+				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/06.png"><img class="thumb" src="images/screenshots/06-small.png" alt=""></a></div>
+				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/07.png"><img class="thumb" src="images/screenshots/07-small.png" alt=""></a></div>
+				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/08.png"><img class="thumb" src="images/screenshots/08-small.png" alt=""></a></div>
 				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/05.png"><img class="thumb" src="images/screenshots/05-small.png" alt=""></a></div>			
 			</div>
 		</div>
@@ -207,16 +216,14 @@
 	<!-- === Slide 4 - Process === -->
 	<section class="slide story" id="slide-4" data-slide="4">
 		<div class="container">
-			<div class="">
+			<div class="row">
 				<div class="col-6 col-sm-6 col-xs-12">
 					<div class="title-row">Tell us how you feel...</div>
 					<div class="line-row">
 						<div class="hr">&nbsp;</div>
 					</div>
 					<div class="subtitle-row">We hope you enjoy our app and we value your feedback. If you're not entirely happy, please let us know.</div>
-					<div class="subtitle-row"></div>
-					<div class="subtitle-row"></div>
-					<div class="subtitle-row"></div>
+					
 				</div>
 				<div class="col-6 col-sm-6 col-xs-12">
 					
@@ -247,7 +254,8 @@
 						<div class="line-row">
 							<div class="row">&nbsp;</div>
 						</div>
-						<button id="submit" type="submit" class="btn btn-success" onclick="$('#feedbackForm').submit();">Submit</button>
+						<button id="submitbutton" type="submit" class="btn btn-success" onclick="$('#feedbackForm').submit();">Submit</button>
+						<img id="loading" src="images/loading.gif" width="50px;" style="display:none;" >
 					</form>
 					<div class="title-row" style="display:none;" id="form-message"> </div> 
 					<div class="subtitle-row" id="form-rateapp" style="display:none;">
@@ -257,8 +265,10 @@
 						</p>
 					</div>
 				</div>
-
 			</div><!-- /row -->
+			<div class="subtitle-row"></div>
+			<div class="subtitle-row"></div>
+			<div class="subtitle-row"></div>
 		</div><!-- /container -->
 	</section><!-- /slide4 -->
 	
