New contact links and logo

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<title>VoteBee - UK 2015 General Election Voter Emotion tracker.</title> 
 	<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 	<link rel="shortcut icon" type="image/png" href="https://votebee.social/images/favicon.png"/>
-	<meta name="description" content="BlackTie.co - Free Handsome Bootstrap Themes" />	    
-	<meta name="keywords" content="themes, bootstrap, free, templates, bootstrap 3, freebie,">
-	<meta property="og:title" content="">
+	<meta name="description" content="VoteBee uses the EMOTIVE Engine developed from Professor Tom Jackson and Dr Martin Sykora’s research at Loughborough University. EMOTIVE analyses twitter traffic to extract the emotional content using its own proprietary technology (a complex natural language processing ontology). The VoteBee mobile apps and digital infrastructure are developed and maintained by enCircle Solutions Ltd." />	    
+	<meta name="keywords" content="votebee, voter, uk, general, election, 2015, emotion, tracker, politics, social">
+	
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fancybox/jquery.fancybox-v=2.1.5.css" type="text/css" media="screen">
@@ -196,20 +196,6 @@
 						</a-->
 					</div>
 				</div>
-				<!--div class="col-12 col-sm-2 with-hover-text">
-					<p><a target="_blank" href="#"><i class="icon icon-home"></i></a></p>
-					<span class="hover-text font-light ">London, England<br>zip code 98443</span></a>
-				</div>
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a target="_blank" href="#"><i class="icon icon-facebook"></i></a></p>
-					<span class="hover-text font-light ">facebook/blacktie_co</span></a>
-				</div>
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a target="_blank" href="#"><i class="icon icon-twitter"></i></a></p>
-					<span class="hover-text font-light ">@BlackTie_co</span></a>
-				</div>
-				<div class="col-sm-1 hidden-sm">&nbsp;</div-->
-			
 		</div>
 	</div><!-- /slide5 -->
 
@@ -266,53 +252,35 @@
 					</div>
 				</div>
 			</div><!-- /row -->
-			<div class="subtitle-row"></div>
-			<div class="subtitle-row"></div>
-			<div class="subtitle-row"></div>
-		</div><!-- /container -->
-	</section><!-- /slide4 -->
-	
-	
-	<!-- === Slide 6 / Contact === 
-	<div class="slide story" id="slide-6" data-slide="6">
-		<div class="container">
-			<div class="row title-row">
-				<div class="col-12 font-light">Leave us a <span class="font-semibold">message</span></div>
-			</div>
-			<div class="row line-row">
-				<div class="hr">&nbsp;</div>
-			</div>
-			<div class="row subtitle-row">
-				<div class="col-sm-1 hidden-sm">&nbsp;</div>
-				<div class="col-12 col-sm-10 font-light">You can find us literally anywhere, just push a button and we’re there</div>
-				<div class="col-sm-1 hidden-sm">&nbsp;</div>
+			
+			<div class="col-12">&nbsp;</div>
+				<br/>
+				<h4 class="font-thin">VoteBee uses the <a target="_blank" href="" onclick='window.open("http://emotive.lboro.ac.uk");return false;'>EMOTIVE</a> Engine developed from Professor Tom Jackson and Dr Martin Sykora’s research at <a href="" onclick='window.open("http://lboro.ac.uk");return false;'>Loughborough University</a>. EMOTIVE analyses twitter traffic to extract the emotional content using its own proprietary technology (a complex natural language processing ontology). The "VoteBee" mobile apps and digital infrastructure are developed and maintained by <a href="" onclick='window.open("http://www.encircle.co.uk");return false;'>enCircle Solutions Ltd.</a></h4>
 			</div>
 			<div id="contact-row-4" class="row">
-				<div class="col-sm-1 hidden-sm">&nbsp;</div>
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a target="_blank" href="#"><i class="icon icon-phone"></i></a></p>
-					<span class="hover-text font-light ">+44 4839-4343</span></a>
+				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
+					<h3>On The Phone</h3>
+					<p><a target="_blank" href="tel:00441509222222"><i class="icon icon-phone"></i></a></p>
+					<span class="hover-text font-light ">+44 (0) 1509 222 222</span></a>
 				</div>
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a target="_blank" href="#"><i class="icon icon-envelope"></i></a></p>
-					<span class="hover-text font-light ">munter@blacktie.co</span></a>
+				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
+				<h3>Press Enquiries</h3>
+					<p><a href="mailto:press@lboro.ac.uk"><i class="icon icon-envelope"></i></a></p>
+					<span class="hover-text font-light ">press@lboro.ac.uk</span></a>
 				</div>
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a target="_blank" href="#"><i class="icon icon-home"></i></a></p>
-					<span class="hover-text font-light ">London, England<br>zip code 98443</span></a>
+				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
+					<h3>Facebook</h3>
+					<p><a target="_blank" href="https://www.facebook.com/lborouniversity"><i class="icon icon-facebook"></i></a></p>
+					<span class="hover-text font-light ">facebook/lborouniversity</span></a>
 				</div>
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a target="_blank" href="#"><i class="icon icon-facebook"></i></a></p>
-					<span class="hover-text font-light ">facebook/blacktie_co</span></a>
+				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
+					<h3>Twitter</h3>
+					<p><a target="_blank" href="https://twitter.com/lborouniversity"><i class="icon icon-twitter"></i></a></p>
+					<span class="hover-text font-light ">@lborouniversity</span></a>
 				</div>
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a target="_blank" href="#"><i class="icon icon-twitter"></i></a></p>
-					<span class="hover-text font-light ">@BlackTie_co</span></a>
-				</div>
-				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 			</div>
-		</div>
-	</div><!-- /Slide 6 -->
+		</div><!-- /container -->
+	</section><!-- /slide4 -->
 	
 </body>
 
